--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,44 @@
-version: '3'
+version: '3.5'
+
 services:
   server:
     build:
       context: .
-      dockerfile: ../test_10_sql/Dockerfile_server
+      dockerfile: ./DockerfileServer
+    container_name: server
     ports:
-      - 5001:5000
+      - 5001:5001
     networks:
       - mynetwork
+    volumes:
+      - ./:/app
+    depends_on:
+      db:
+        condition: service_healthy
+
   db:
     build:
       context: .
-      dockerfile: ../test_10_sql/DockerfileDbWorked
+      dockerfile: ./DockerfileDb
+    container_name: db
+    env_file: .env
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=postgres
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    volumes:
+      - DB:/var/lib/postgresql/data
     networks:
       - mynetwork
+    healthcheck:
+      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'"]
+      retries: 5
+      interval: 5s
+      start_period: 5s
+
 networks:
   mynetwork:
+
+volumes:
+  DB:
