--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
+SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://postgres:postgres@localhost:5432/api_db
+SQLALCHEMY_DATABASE_URI_1=postgresql+psycopg2://postgres:postgres@db:5432/university_db
