--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = "2.3.2"
 flask-restx = "^1.1.0"
 psycopg2-binary = "^2.9.6"
 sqlalchemy = "^2.0.15"
+python-dotenv = "^1.0.0"
 
 
 [tool.flake8]
