--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 SQLALCHEMY_DATABASE_URI=postgresql+psycopg2://postgres:postgres@db:5432/university_db
+SQLALCHEMY_DATABASE_URI_local=postgresql+psycopg2://postgres:postgres@localhost:5432/api_db
