--- a/compose/db/Dockerfile
+++ b/compose/db/Dockerfile
@@ -3,4 +3,4 @@ FROM postgres:15
 ENV POSTGRES_USER postgres
 ENV POSTGRES_PASSWORD postgres
 
-COPY ./init.sql /docker-entrypoint-initdb.d/
+COPY ./compose/db/init.sql /docker-entrypoint-initdb.d/
